--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.12.1'
     // week7
     antlr group: 'org.antlr', name: 'antlr4', version: '4.13.2'
+    // week8
+    implementation group: 'io.github.jamsesso', name: 'json-logic-java', version: '1.0.9'
+    implementation group: 'org.jeasy', name: 'easy-rules-core', version: '4.1.0'
+    implementation group: 'org.jeasy', name: 'easy-rules-mvel', version: '4.1.0'
+    implementation group: 'org.mvel', name: 'mvel2', version: '2.5.2.Final'
 
     // initial
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
