--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation group: 'org.jeasy', name: 'easy-rules-core', version: '4.1.0'
     implementation group: 'org.jeasy', name: 'easy-rules-mvel', version: '4.1.0'
     implementation group: 'org.mvel', name: 'mvel2', version: '2.5.2.Final'
+    // week10
+    implementation group: 'org.ow2.asm', name: 'asm', version: '9.8'
 
     // initial
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
